--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 
-Django==5.2.7
-Pillow==10.1.0
-whitenoise==6.5.0
-gunicorn==21.2.0
-django-environ==0.11.0
-psycopg2-binary==2.9.10
+Django
+Pillow
+whitenoise
+gunicorn
+django-environ
+psycopg2-binary
 
 
 # Optional: pin any other packages your project needs. To create exact list from
 # your environment run: `pip freeze > requirements.txt` and review the output.
+
 
